--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,17 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anime Qoutes</title>
-    <link rel="stylesheet" href="/styles/styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Anime Wisdom</title>
+  <link rel="stylesheet" href="/styles/styles.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+    rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
 </head>
-<body>
-    <div >
-        <h1>Write your anime name</h1>
+
+<body class="d-flex justify-content-center align-items-center vh-100">
+  <div class="glass container">
+    <div class="row">
+      <div class="col">
+        <h1 class="text-center text">Anime Wisdom</h1>
+        <p class="text-center fs-5 fst-italic" style="color: #333">
+          Discover inspiring quotes and timeless lessons from your favorite
+          anime.
+        </p>
+        <form action="/submit" method="POST" class="w-100 d-flex">
+          <input type="text" name="anime" class="form-control" placeholder="Enter anime name" aria-label="Anime"
+            required />
+          <button type="submit" class="btn btn-primary ms-2">Submit</button>
+        </form>
+      </div>
+
+      <!-- <div class="col">
+          
+        </div> -->
     </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
